omitted the js due to glitch while scrolling. Seperated overflow:hidden from body and moved to html alone which fixed the nav bar sticky issue

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,10 @@ body, html {
   background-color: #000;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow-x: hidden; /* Prevent horizontal scroll */
+}
+
+html {
+  overflow-x: hidden;
 }
 
 main {
